[gd_scene load_steps=23 format=3 uid="uid://cla1wm8elf7a2"]

[ext_resource type="Script" uid="uid://3nfjkx2oxnjx" path="res://scripts/skill_tree.gd" id="1_a302t"]
[ext_resource type="Texture2D" uid="uid://bnvglmwtrivok" path="res://sprites/taco.png" id="1_ty3n3"]
[ext_resource type="Texture2D" uid="uid://c83jx6vodcu1q" path="res://sprites/Sprite-0005.png" id="2_tnam6"]
[ext_resource type="FontFile" uid="uid://crg07qg7f4136" path="res://fonts/Fredoka-Bold.ttf" id="3_51bdh"]
[ext_resource type="FontFile" uid="uid://b1ecuue8wn2td" path="res://fonts/Fredoka-Regular.ttf" id="4_6awrb"]
[ext_resource type="Texture2D" uid="uid://bru26pm8rutlf" path="res://sprites/gtaco.png" id="6_6awrb"]
[ext_resource type="Texture2D" uid="uid://dx1pni0wvf3lj" path="res://sprites/Pixel Cursor (480x160).png" id="7_h52vt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ko7ae"]
bg_color = Color(0.047058824, 0.22745098, 0.6627451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_003p6"]
bg_color = Color(0.030314438, 0.030273953, 0.21581823, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hwd2a"]
bg_color = Color(0.101960786, 0.101960786, 0.44705883, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_51bdh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h52vt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a302t"]
bg_color = Color(0, 0, 0, 0.44705883)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyjg3"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_51bdh"]
bg_color = Color(0.6, 0.6, 0.6, 0.44705883)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6awrb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_urm3n"]
bg_color = Color(0.03137255, 0.03137255, 0.21568628, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dvtuv"]
bg_color = Color(0.101960786, 0.101960786, 0.44705883, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfm8x"]
bg_color = Color(0.03137255, 0.03137255, 0.21568628, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rh3y1"]
bg_color = Color(0.101960786, 0.101960786, 0.44705883, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0rm1"]
atlas = ExtResource("7_h52vt")
region = Rect2(108, 0, 36, 53)

[sub_resource type="SpriteFrames" id="SpriteFrames_p21vy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0rm1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a302t")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ko7ae")

[node name="OverDrive" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -102.0
offset_right = 42.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_003p6")
theme_override_styles/disabled = SubResource("StyleBoxFlat_hwd2a")
theme_override_styles/focus = SubResource("StyleBoxEmpty_51bdh")

[node name="Sprite2D" type="Sprite2D" parent="Panel/OverDrive"]
position = Vector2(50.000015, 34.000004)
rotation = 0.85695666
scale = Vector2(1.2266474, 1.2377844)
texture = ExtResource("1_ty3n3")

[node name="Panel" type="Panel" parent="Panel/OverDrive"]
visible = false
layout_mode = 0
offset_left = 83.0
offset_top = -330.0
offset_right = 351.0
offset_bottom = 37.0

[node name="Label" type="Label" parent="Panel/OverDrive/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.5
offset_right = 123.5
offset_bottom = 59.0
grow_horizontal = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_51bdh")
theme_override_font_sizes/font_size = 48
text = "HyperDrive"

[node name="Label2" type="Label" parent="Panel/OverDrive/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -117.5
offset_right = 133.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_6awrb")
theme_override_font_sizes/font_size = 22
text = "BOOSTS TACOS PER 
CLICK, TACOS PER 
SECOND AND ENTROPY
PER SECOND BY 50%"
horizontal_alignment = 1

[node name="buyhyperdrive" type="Button" parent="Panel/OverDrive/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 287.0
offset_right = 214.0
offset_bottom = 357.0
theme_override_fonts/font = ExtResource("3_51bdh")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_h52vt")
text = "BUY"

[node name="Label3" type="Label" parent="Panel/OverDrive/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = 63.5
offset_right = 133.5
offset_bottom = 192.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_6awrb")
theme_override_font_sizes/font_size = 22
text = "COST: 1B TACOS"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Panel/OverDrive/Panel"]
position = Vector2(140, 209)
rotation = 0.85695666
scale = Vector2(1.2266474, 1.2377844)
texture = ExtResource("1_ty3n3")

[node name="Line2D" type="Line2D" parent="Panel/OverDrive"]
position = Vector2(44, 2.7150009)
scale = Vector2(1, 0.75500005)
points = PackedVector2Array(-1, -3, -1, -183)
default_color = Color(0.12156863, 0.12156863, 0.12156863, 0.5529412)

[node name="Line2D2" type="Line2D" parent="Panel/OverDrive"]
position = Vector2(34.668213, 4.77137)
scale = Vector2(1.0368663, 0.8898057)
points = PackedVector2Array(-1, -3, -171.3511, -160.45227)
default_color = Color(0.12347304, 0.123473056, 0.12347301, 0.5529412)

[node name="Back" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 86.0
offset_top = 78.0
offset_right = 155.0
offset_bottom = 139.0
rotation = -3.1415927
theme_override_styles/normal = SubResource("StyleBoxFlat_a302t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tyjg3")
theme_override_styles/hover = SubResource("StyleBoxFlat_51bdh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6awrb")
icon = ExtResource("2_tnam6")
icon_alignment = 1
expand_icon = true

[node name="GTacoUpg" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -314.0
offset_right = 42.0
offset_bottom = -236.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_urm3n")
theme_override_styles/disabled = SubResource("StyleBoxFlat_dvtuv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_51bdh")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="Panel/GTacoUpg"]
position = Vector2(50.000015, 34.000004)
rotation = 0.85695666
scale = Vector2(1.2266474, 1.2377844)
texture = ExtResource("6_6awrb")

[node name="Panel" type="Panel" parent="Panel/GTacoUpg"]
layout_mode = 0
offset_left = 83.0
offset_top = -330.0
offset_right = 351.0
offset_bottom = 37.0

[node name="Label" type="Label" parent="Panel/GTacoUpg/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.5
offset_right = 123.5
offset_bottom = 59.0
grow_horizontal = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_51bdh")
theme_override_font_sizes/font_size = 48
text = "GTaco Max"

[node name="Label2" type="Label" parent="Panel/GTacoUpg/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -117.5
offset_right = 133.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_6awrb")
theme_override_font_sizes/font_size = 22
text = "GOLDEN TACO NOW
BOOSTS TACOS PER 
CLICK BY 15X."
horizontal_alignment = 1

[node name="buygtacomax" type="Button" parent="Panel/GTacoUpg/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 287.0
offset_right = 214.0
offset_bottom = 357.0
theme_override_fonts/font = ExtResource("3_51bdh")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_h52vt")
text = "BUY"

[node name="Label3" type="Label" parent="Panel/GTacoUpg/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = 63.5
offset_right = 133.5
offset_bottom = 192.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_6awrb")
theme_override_font_sizes/font_size = 22
text = "COST: 10M ENTROPY"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Panel/GTacoUpg/Panel"]
position = Vector2(140, 209)
rotation = 0.85695666
scale = Vector2(1.2266474, 1.2377844)
texture = ExtResource("1_ty3n3")

[node name="Line2D" type="Line2D" parent="Panel/GTacoUpg"]
position = Vector2(44, 2.7850037)
scale = Vector2(1, 0.745)
points = PackedVector2Array(-1, -3, -1, -183)
default_color = Color(0.12347304, 0.123473056, 0.12347301, 0.5529412)

[node name="DSauceUpg" type="Button" parent="Panel"]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -252.0
offset_top = -315.0
offset_right = -168.0
offset_bottom = -237.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_bfm8x")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rh3y1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_51bdh")
disabled = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="Panel/DSauceUpg"]
position = Vector2(48.000015, 31)
scale = Vector2(1.2266474, 1.2377844)
sprite_frames = SubResource("SpriteFrames_p21vy")

[node name="Panel" type="Panel" parent="Panel/DSauceUpg"]
visible = false
layout_mode = 0
offset_left = 83.0
offset_top = -330.0
offset_right = 351.0
offset_bottom = 37.0

[node name="Label" type="Label" parent="Panel/DSauceUpg/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.5
offset_right = 123.5
offset_bottom = 59.0
grow_horizontal = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_51bdh")
theme_override_font_sizes/font_size = 40
text = "Disco Sauce 
Max"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel/DSauceUpg/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -83.5
offset_right = 133.5
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_6awrb")
theme_override_font_sizes/font_size = 22
text = "DISCO SAUCE NOW
BOOSTS TACOS PER 
SECOND BY 150X."
horizontal_alignment = 1

[node name="buydsaucemax" type="Button" parent="Panel/DSauceUpg/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 287.0
offset_right = 214.0
offset_bottom = 357.0
theme_override_fonts/font = ExtResource("3_51bdh")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_h52vt")
text = "BUY"

[node name="Label3" type="Label" parent="Panel/DSauceUpg/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = 63.5
offset_right = 133.5
offset_bottom = 192.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_6awrb")
theme_override_font_sizes/font_size = 22
text = "COST: 20M ENTROPY"
horizontal_alignment = 1

[node name="Sprite2D" type="AnimatedSprite2D" parent="Panel/DSauceUpg/Panel"]
position = Vector2(133.00003, 210.99998)
scale = Vector2(1.2266474, 1.2377844)
sprite_frames = SubResource("SpriteFrames_p21vy")

[node name="Line2D" type="Line2D" parent="Panel/DSauceUpg"]
position = Vector2(44, 2.7850037)
scale = Vector2(1, 0.745)
points = PackedVector2Array(-1, -3, -1, -183)
default_color = Color(0.12347304, 0.123473056, 0.12347301, 0.5529412)

[node name="notenoughmoneylabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -317.5
offset_top = 37.0
offset_right = -104.5
offset_bottom = 57.0
grow_horizontal = 2
scale = Vector2(3, 3)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_6awrb")
text = "You Don't Have Enough Tacos"
horizontal_alignment = 1

[connection signal="button_up" from="Panel/OverDrive" to="." method="_on_over_drive_button_up"]
[connection signal="button_up" from="Panel/OverDrive/Panel/buyhyperdrive" to="." method="_on_buyhyperdrive_button_up"]
[connection signal="button_up" from="Panel/Back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="Panel/GTacoUpg" to="." method="_on_g_taco_upg_button_up"]
[connection signal="button_up" from="Panel/GTacoUpg/Panel/buygtacomax" to="." method="_on_buygtacomax_button_up"]
[connection signal="button_up" from="Panel/DSauceUpg" to="." method="_on_d_sauce_upg_button_up"]
[connection signal="button_up" from="Panel/DSauceUpg/Panel/buydsaucemax" to="." method="_on_buydsaucemax_button_up"]
